minor: change "new Integer" to more efficient "Integer.valueOf"